ci: adiciona upload de artefatos (JaCoCo e PIT)

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,17 +1,41 @@
-﻿name: Java CI com Maven
+﻿name: Java CI com Maven e Relatórios
+
 on:
   push:
     branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 21
+    - name: Baixar código
+      uses: actions/checkout@v4
+
+    - name: Configurar JDK 21
       uses: actions/setup-java@v4
       with:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
+
+    - name: Compilar e Testar com Maven
+      # O comando package executa o JaCoCo configurado no seu pom.xml
       run: mvn -B package --file pom.xml
+
+    - name: Upload do Relatório de Cobertura (JaCoCo)
+      uses: actions/upload-artifact@v4
+      with:
+        name: relatorio-cobertura-jacoco
+        path: target/site/jacoco/
+        retention-days: 7
+
+    - name: Upload do Relatório de Mutação (PIT)
+      if: always() # Garante que o PIT suba mesmo se houver falhas
+      uses: actions/upload-artifact@v4
+      with:
+        name: relatorio-mutacao-pit
+        path: target/pit-reports/
+        retention-days: 7
