--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.banking</groupId>
+  <groupId>com.bank</groupId>
   <artifactId>banking</artifactId>
   <version>1.0.0</version>
   <name>banking</name>
@@ -86,10 +86,10 @@
         <version>${pit.version}</version>
         <configuration>
           <targetClasses>
-            <param>*</param>
+            <param>com.bank.*</param>
           </targetClasses>
           <targetTests>
-            <param>*Test</param>
+            <param>com.bank.*Test</param>
           </targetTests>
           <mutators>
             <mutator>STRONGER</mutator>
