--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
       </plugin>
 
       <!-- Jacoco -->
-      <plugin>
+      <!--plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <version>0.8.10</version>
@@ -87,7 +87,7 @@
             </goals>
           </execution>
         </executions>
-      </plugin>
+      </plugin-->
 
       <!-- PIT Mutation Testing -->
       <plugin>
